--- a/index.html
+++ b/index.html
@@ -8,13 +8,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital@1&display=swap" rel="stylesheet"> 
     <style>
         body {
-            margin: 0;
-            padding: 0;
             overflow: hidden;
             background-image: url('videos/spaceFondo.png');
-            background-size: cover;
+            background-size: fullscreen;
             background-position: center;
-            background-repeat: no-repeat;
         }
     </style>
 </head>
