--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="utf-8">
     <title>Para Naty</title>
     <link rel="stylesheet" type="text/css" href="css/estilo-principal.css">
-    <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital@1&display=swap" rel="stylesheet"> 
     <style>
         body {
+            margin: 0;
+            padding: 0;
             overflow: hidden;
             background-image: url('videos/spaceFondo.png');
-            background-size: fullscreen;
+            background-size: full;
             background-position: center;
+            background-repeat: no-repeat;
         }
     </style>
 </head>
