--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             margin: 0;
             padding: 0;
             overflow: hidden;
-            background-image: url('videos/spaceFondo.png');
+            background-image: url('videos/spacefondo.png');
             background-size: full;
             background-position: center;
             background-repeat: no-repeat;
